--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "ngx-rut-v2",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "author": {
     "name": "Daniel Díaz Astudillo"
   },
+  "description": "Angular library to format and validate RUT (Rol Único Tributario) from Chile",
   "license": "MIT",
   "scripts": {
     "ng": "ng",
