--- a/projects/ngx-rut-v2/package.json
+++ b/projects/ngx-rut-v2/package.json
@@ -2,6 +2,10 @@
   "name": "ngx-rut-v2",
   "version": "1.5.0",
   "private": false,
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/danieldiazastudillo/ngx-rut-v2"
+  },
   "peerDependencies": {
     "@angular/common": "^18.1.0",
     "@angular/core": "^18.1.0"
