--- a/projects/ngx-rut-v2/package.json
+++ b/projects/ngx-rut-v2/package.json
@@ -1,10 +1,15 @@
 {
   "name": "ngx-rut-v2",
-  "version": "1.6.3",
+  "version": "1.6.4",
   "private": false,
+  "author": {
+    "name": "Daniel Díaz Astudillo"
+  },
+  "description": "Angular library to format and validate RUT (Rol Único Tributario) from Chile",
+
   "repository": {
     "type": "git",
-    "url": "https://github.com/danieldiazastudillo/ngx-rut-v2"
+    "url": "git+https://github.com/danieldiazastudillo/ngx-rut-v2.git"
   },
   "peerDependencies": {
     "@angular/common": "^19.2.14",
