--- a/projects/ngx-rut-v2/package.json
+++ b/projects/ngx-rut-v2/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ngx-rut-v2",
-  "version": "1.8.0",
+  "version": "1.9.0",
   "private": false,
   "author": {
     "name": "Daniel Díaz Astudillo"
@@ -12,8 +12,8 @@
     "url": "git+https://github.com/danieldiazastudillo/ngx-rut-v2.git"
   },
   "peerDependencies": {
-    "@angular/common": "^20.0.0",
-    "@angular/core": "^20.0.0"
+    "@angular/common": ">=20.0.0 <22.0.0",
+    "@angular/core": ">=20.0.0 <22.0.0"
   },
   "dependencies": {
     "tslib": "^2.8.1"
